--- a/PasswordReset.html
+++ b/PasswordReset.html
@@ -1,198 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset Password</title>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .container {
-            background: white;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            max-width: 400px;
-            width: 100%;
-        }
-        input {
-            width: 100%;
-            padding: 0.75rem;
-            margin: 0.5rem 0;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-        button {
-            background: #007BFF;
-            color: white;
-            border: none;
-            padding: 0.75rem 1.5rem;
-            border-radius: 4px;
-            cursor: pointer;
-            width: 100%;
-        }
-        button:hover {
-            background: #0056b3;
-        }
-        .message {
-            margin-top: 1rem;
-            padding: 0.75rem;
-            border-radius: 4px;
-        }
-        .success {
-            background: #d4edda;
-            color: #155724;
-        }
-        .error {
-            background: #f8d7da;
-            color: #721c24;
-        }
-        .hidden {
-            display: none;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Reset Password</title>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f9;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      max-width: 400px;
+      width: 100%;
+    }
+    input {
+      width: 100%;
+      padding: 0.75rem;
+      margin: 0.5rem 0;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
+    button {
+      background: #007BFF;
+      color: white;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      border-radius: 4px;
+      cursor: pointer;
+      width: 100%;
+    }
+    button:hover {
+      background: #0056b3;
+    }
+    .message {
+      margin-top: 1rem;
+      padding: 0.75rem;
+      border-radius: 4px;
+    }
+    .success {
+      background: #d4edda;
+      color: #155724;
+    }
+    .error {
+      background: #f8d7da;
+      color: #721c24;
+    }
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div id="expired-section" class="hidden">
-            <h1>Password Reset Link Expired</h1>
-            <div class="message error">
-                <p>The password reset link has expired or is invalid.</p>
-            </div>
-            <p>Please request a new password reset link.</p>
-            <a href="/request-reset">Request New Link</a>
-        </div>
-
-        <div id="reset-section" class="hidden">
-            <h1>Reset Password</h1>
-            <form id="resetForm">
-                <input id="password" required type="password" placeholder="New Password" />
-                <input id="confirmPassword" required type="password" placeholder="Confirm Password" />
-                <button type="submit">Reset Password</button>
-            </form>
-            <div id="message" class="message hidden"></div>
-        </div>
-
-        <div id="loading-section">
-            <h1>Loading...</h1>
-            <p>Verifying your reset link...</p>
-        </div>
+  <div class="container">
+    <div id="expired-section" class="hidden">
+      <h1>Password Reset Link Expired</h1>
+      <div class="message error">
+        <p>The password reset link has expired or is invalid.</p>
+      </div>
+      <p>Please request a new password reset link.</p>
+      <a href="/request-reset">Request New Link</a>
     </div>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', async function () {
-            console.log('Document loaded, initializing Supabase...');
+    <div id="reset-section" class="hidden">
+      <h1>Reset Password</h1>
+      <form id="resetForm">
+        <input id="password" required type="password" placeholder="New Password" />
+        <input id="confirmPassword" required type="password" placeholder="Confirm Password" />
+        <button type="submit">Reset Password</button>
+      </form>
+      <div id="message" class="message hidden"></div>
+    </div>
 
-            const SUPABASE_URL = 'https://dnrzzwunwhszuuhczzzs.supabase.co';
-            const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRucnp6d3Vud2hzenV1aGN6enpzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzk4ODA1MjMsImV4cCI6MjA1NTQ1NjUyM30.1fe86HFhc492dy2OuXBdL7zpvGvawECjIwEZjEZvHRU';
-            const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+    <div id="loading-section">
+      <h1>Loading...</h1>
+      <p>Verifying your reset link...</p>
+    </div>
+  </div>
 
-            console.log('Supabase client initialized');
-            console.log('Current URL:', window.location.href);
+  <script>
+    document.addEventListener('DOMContentLoaded', async function () {
+      const SUPABASE_URL = 'https://dnrzzwunwhszuuhczzzs.supabase.co';
+      const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRucnp6d3Vud2hzenV1aGN6enpzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzk4ODA1MjMsImV4cCI6MjA1NTQ1NjUyM30.1fe86HFhc492dy2OuXBdL7zpvGvawECjIwEZjEZvHRU';
+      const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-            await handlePasswordReset();
+      const hashParams = new URLSearchParams(window.location.hash.substring(1));
+      const accessToken = hashParams.get('access_token');
+      const type = hashParams.get('type');
 
-            async function handlePasswordReset() {
-                try {
-                    const searchParams = new URLSearchParams(window.location.search);
-                    const email = searchParams.get('email');
+      if (!accessToken || type !== 'recovery') {
+        console.error('Invalid or missing access token.');
+        showExpiredSection();
+        return;
+      }
 
-                    const hashParams = new URLSearchParams(window.location.hash.substring(1));
-                    const token = hashParams.get('access_token');
-                    const type = hashParams.get('type');
+      const { data, error } = await supabase.auth.setSession({
+        access_token: accessToken,
+        refresh_token: ''
+      });
 
-                    console.log('Token:', token);
-                    console.log('Email:', email);
-                    console.log('Type:', type);
+      if (error) {
+        console.error('Session setup failed:', error.message);
+        showExpiredSection();
+        return;
+      }
 
-                    if (!token || type !== 'recovery') {
-                        console.error('Missing or invalid token/type in URL');
-                        showExpiredSection();
-                        return;
-                    }
+      console.log('Session restored. Showing reset form.');
+      showResetSection();
 
-                    console.log('Verifying recovery token...');
-                    const { error } = await supabaseClient.auth.verifyOtp({
-                        token: token,
-                        type: 'recovery'
-                    });
+      document.getElementById('resetForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
 
-                    if (error) {
-                        console.error('Token verification failed:', error.message);
-                        showExpiredSection();
-                        return;
-                    }
+        const password = document.getElementById('password').value;
+        const confirmPassword = document.getElementById('confirmPassword').value;
+        const messageEl = document.getElementById('message');
 
-                    console.log('Token verified successfully');
-                    showResetSection();
+        messageEl.classList.add('hidden');
 
-                } catch (error) {
-                    console.error('Error in handlePasswordReset:', error.message);
-                    showExpiredSection();
-                }
-            }
+        if (password !== confirmPassword) {
+          messageEl.textContent = 'Passwords do not match.';
+          messageEl.className = 'message error';
+          messageEl.classList.remove('hidden');
+          return;
+        }
 
-            function showResetSection() {
-                document.getElementById('loading-section').classList.add('hidden');
-                document.getElementById('reset-section').classList.remove('hidden');
-                document.getElementById('expired-section').classList.add('hidden');
-            }
+        const { error: updateError } = await supabase.auth.updateUser({ password });
 
-            function showExpiredSection() {
-                document.getElementById('loading-section').classList.add('hidden');
-                document.getElementById('reset-section').classList.add('hidden');
-                document.getElementById('expired-section').classList.remove('hidden');
-            }
+        if (updateError) {
+          messageEl.textContent = 'Failed to reset password: ' + updateError.message;
+          messageEl.className = 'message error';
+          messageEl.classList.remove('hidden');
+          return;
+        }
 
-            document.getElementById('resetForm').addEventListener('submit', async (e) => {
-                e.preventDefault();
+        messageEl.textContent = 'Password reset successfully! You can now return to the app.';
+        messageEl.className = 'message success';
+        messageEl.classList.remove('hidden');
+        document.getElementById('resetForm').style.display = 'none';
+      });
 
-                const password = document.getElementById('password').value;
-                const confirmPassword = document.getElementById('confirmPassword').value;
-                const messageElement = document.getElementById('message');
+      function showResetSection() {
+        document.getElementById('loading-section').classList.add('hidden');
+        document.getElementById('reset-section').classList.remove('hidden');
+        document.getElementById('expired-section').classList.add('hidden');
+      }
 
-                messageElement.classList.add('hidden');
-
-                if (password !== confirmPassword) {
-                    messageElement.textContent = 'Passwords do not match.';
-                    messageElement.className = 'message error';
-                    messageElement.classList.remove('hidden');
-                    return;
-                }
-
-                try {
-                    console.log('Updating password...');
-                    const { data, error } = await supabaseClient.auth.updateUser({
-                        password: password
-                    });
-
-                    if (error) {
-                        console.error('Password update failed:', error.message);
-                        throw error;
-                    }
-
-                    console.log('Password updated:', JSON.stringify(data));
-                    messageElement.textContent = 'Password reset successfully! Return to the app to log in.';
-                    messageElement.className = 'message success';
-                    messageElement.classList.remove('hidden');
-                    document.getElementById('resetForm').style.display = 'none';
-                } catch (error) {
-                    console.error('Password update error:', error.message);
-                    messageElement.textContent = 'Failed to reset password: ' + error.message;
-                    messageElement.className = 'message error';
-                    messageElement.classList.remove('hidden');
-                }
-            });
-        });
-    </script>
+      function showExpiredSection() {
+        document.getElementById('loading-section').classList.add('hidden');
+        document.getElementById('reset-section').classList.add('hidden');
+        document.getElementById('expired-section').classList.remove('hidden');
+      }
+    });
+  </script>
 </body>
 </html>
