--- a/PasswordReset.html
+++ b/PasswordReset.html
@@ -92,62 +92,22 @@
     document.addEventListener('DOMContentLoaded', async function () {
       const SUPABASE_URL = 'https://dnrzzwunwhszuuhczzzs.supabase.co';
       const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRucnp6d3Vud2hzenV1aGN6enpzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzk4ODA1MjMsImV4cCI6MjA1NTQ1NjUyM30.1fe86HFhc492dy2OuXBdL7zpvGvawECjIwEZjEZvHRU';
-      const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+      const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-      const hashParams = new URLSearchParams(window.location.hash.substring(1));
-      const accessToken = hashParams.get('access_token');
-      const type = hashParams.get('type');
+      await handlePasswordReset();
 
-      if (!accessToken || type !== 'recovery') {
-        console.error('Invalid or missing access token.');
-        showExpiredSection();
-        return;
-      }
+      async function handlePasswordReset() {
+        const { data: { user }, error } = await supabaseClient.auth.getUser();
 
-      const { data, error } = await supabase.auth.setSession({
-        access_token: accessToken,
-        refresh_token: ''
-      });
-
-      if (error) {
-        console.error('Session setup failed:', error.message);
-        showExpiredSection();
-        return;
-      }
-
-      console.log('Session restored. Showing reset form.');
-      showResetSection();
-
-      document.getElementById('resetForm').addEventListener('submit', async (e) => {
-        e.preventDefault();
-
-        const password = document.getElementById('password').value;
-        const confirmPassword = document.getElementById('confirmPassword').value;
-        const messageEl = document.getElementById('message');
-
-        messageEl.classList.add('hidden');
-
-        if (password !== confirmPassword) {
-          messageEl.textContent = 'Passwords do not match.';
-          messageEl.className = 'message error';
-          messageEl.classList.remove('hidden');
+        if (error || !user) {
+          console.error('User not authenticated or token invalid:', error?.message);
+          showExpiredSection();
           return;
         }
 
-        const { error: updateError } = await supabase.auth.updateUser({ password });
-
-        if (updateError) {
-          messageEl.textContent = 'Failed to reset password: ' + updateError.message;
-          messageEl.className = 'message error';
-          messageEl.classList.remove('hidden');
-          return;
-        }
-
-        messageEl.textContent = 'Password reset successfully! You can now return to the app.';
-        messageEl.className = 'message success';
-        messageEl.classList.remove('hidden');
-        document.getElementById('resetForm').style.display = 'none';
-      });
+        console.log('User is authenticated:', user.email);
+        showResetSection();
+      }
 
       function showResetSection() {
         document.getElementById('loading-section').classList.add('hidden');
@@ -160,6 +120,46 @@
         document.getElementById('reset-section').classList.add('hidden');
         document.getElementById('expired-section').classList.remove('hidden');
       }
+
+      document.getElementById('resetForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        const password = document.getElementById('password').value;
+        const confirmPassword = document.getElementById('confirmPassword').value;
+        const messageElement = document.getElementById('message');
+
+        messageElement.classList.add('hidden');
+
+        if (password !== confirmPassword) {
+          messageElement.textContent = 'Passwords do not match.';
+          messageElement.className = 'message error';
+          messageElement.classList.remove('hidden');
+          return;
+        }
+
+        try {
+          console.log('Updating password...');
+          const { data, error } = await supabaseClient.auth.updateUser({
+            password: password
+          });
+
+          if (error) {
+            console.error('Password update failed:', error.message);
+            throw error;
+          }
+
+          console.log('Password updated:', JSON.stringify(data));
+          messageElement.textContent = 'Password reset successfully! Return to the app to log in.';
+          messageElement.className = 'message success';
+          messageElement.classList.remove('hidden');
+          document.getElementById('resetForm').style.display = 'none';
+        } catch (error) {
+          console.error('Password update error:', error.message);
+          messageElement.textContent = 'Failed to reset password: ' + error.message;
+          messageElement.className = 'message error';
+          messageElement.classList.remove('hidden');
+        }
+      });
     });
   </script>
 </body>
