--- a/PasswordReset.html
+++ b/PasswordReset.html
@@ -97,16 +97,29 @@
       await handlePasswordReset();
 
       async function handlePasswordReset() {
-        const { data: { user }, error } = await supabaseClient.auth.getUser();
+        try {
+          const { error: sessionError } = await supabaseClient.auth.exchangeCodeForSession(window.location.href);
 
-        if (error || !user) {
-          console.error('User not authenticated or token invalid:', error?.message);
+          if (sessionError) {
+            console.error('Session exchange failed:', sessionError.message);
+            showExpiredSection();
+            return;
+          }
+
+          const { data: { user }, error: userError } = await supabaseClient.auth.getUser();
+
+          if (userError || !user) {
+            console.error('User not found:', userError?.message);
+            showExpiredSection();
+            return;
+          }
+
+          console.log('User authenticated:', user.email);
+          showResetSection();
+        } catch (err) {
+          console.error('Error during password reset:', err.message);
           showExpiredSection();
-          return;
         }
-
-        console.log('User is authenticated:', user.email);
-        showResetSection();
       }
 
       function showResetSection() {
@@ -138,7 +151,6 @@
         }
 
         try {
-          console.log('Updating password...');
           const { data, error } = await supabaseClient.auth.updateUser({
             password: password
           });
@@ -148,7 +160,6 @@
             throw error;
           }
 
-          console.log('Password updated:', JSON.stringify(data));
           messageElement.textContent = 'Password reset successfully! Return to the app to log in.';
           messageElement.className = 'message success';
           messageElement.classList.remove('hidden');
